--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <div id="newTask" class="input-group mb-3 bg-info">
                             <input type="text" class="form-control" placeholder="" aria-label="Recipient's username">
                         </div>
-                        <input type="button"  id="btnClick" value="ADD">
+                        <input type="button"  id="btnClick" value="ADD" class="btn-add">
                         
                         
                     </div>
