--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <title>To Do List</title>
   </head>
-  <body style="background-color: rgba(247, 215, 148,1.0);">
+  <body style="background-color: black;">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <div class="col-sm-12 text-center text-light" style="background-color: rgba(120, 111, 166,1.0);">
         <h1 style="font-size: 46px;">To Do List</h1>
