--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <h5 class="border-bottom border-2 border-light text-light mb-4 pb-2 ">
                             ADD ITEM
                         </h5>      
-                        <div id="newTask" class="input-group mb-3 bg-info">
+                        <div id="newTask" class="input-group mb-3">
                             <input type="text" class="form-control" placeholder="" aria-label="Recipient's username">
                         </div>
                         <input type="button"  id="btnClick" value="ADD" class="btn-add">
